# whisperx-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  compose.yaml  pyproject.toml
app/: __init__.py  audio.py  config.py  gpu_lock.py  main.py  processing.py  schemas.py  transcript.py
